# Examen_parcial3

./: .gitignore  CMakeLists.txt  README.md  estudiante.cpp  estudiante.h  main.c  main.cpp
Ejercicio1_c/: Asistencia.c  Asistencia.h  Estudiante.c  Estudiante.h  Materias.c  Materias.h
ProgramaC++/: estudiante.cpp  estudiantes.cpp  estudiantes.h  main.cpp  main.h
